RPG Admin Panel

--- a/src/main/webapp/html/my.html
+++ b/src/main/webapp/html/my.html
@@ -288,10 +288,10 @@
 <h2>Create new account:</h2>
 <form>
     <label for="name">name:</label><br>
-    <input type="text" id="name" name="name" required size="12" maxlength="12"><br>
+    <input type="text" id="name" name="name" required size="12" maxlength="12"><br><br>
 
     <label for="title">title:</label><br>
-    <input type="text" id="title" name="title" required size="1" maxlength="30"><br>
+    <input type="text" id="title" name="title" required size="1" maxlength="30"><br><br>
 
     <label for="race">race:</label><br>
     <select id="race" name="race">
@@ -316,15 +316,16 @@
     </select><br><br>
 
     <label for="level">level (between 0 and 100):</label><br>
-    <input type="number" id="level" name="level"  min="0" max="100"><br>
+    <input type="number" id="level" name="level"  min="0" max="100"><br><br>
 
-    <label for="birthday">Birthday :</label>
+    <label for="birthday">Birthday:</label><br>
     <input type="date" id="birthday" name="birthday"><br><br>
 
+    <label for="banned">banned:</label><br>
     <select id="banned" name="banned">
         <option value="true">true</option>
         <option value="false">false</option>
-    </select><br>
+    </select><br><br>
 
 
     <span>
